# gemma_robot

./: .gitignore  README.md  chat_session.md
Eagle/: .gitattributes  (+3 more)
Eagle/Eagle2_5/: .gitignore  README.md  inst_flash_attn.sh  print_gemma3_template.py  pyproject.toml  requirements_frozen.txt  setup_sft.sh  setup_stage1_data.sh  test_gemma3_init.py
Eagle/Eagle2_5/deployment/: README.md  export_llm_engine.py  export_vision_onnx.py  inference.py  modeling_eagle2_5_vl_inference.py  setup_x86.dockerfile  tensorrt_llm.patch
Eagle/Eagle2_5/document/: 0.onboarding.md  1.installing.md  2.preparing_playground.md  3.training.md  4.streamlit_demo.md  5.inference.md  explain_script_arguments.md  how_to_use_lmdb_to_read_images.md
Eagle/Eagle2_5/eaglevl/: conversation.py  dist_utils.py
Eagle/Eagle2_5/eaglevl/model/c_radio/: radio_model.py
Eagle/Eagle2_5/eaglevl/model/eagle2_5/: __init__.py  configuration_eagle2_5_vl.py  modeling_eagle2_5_vl.py
Eagle/Eagle2_5/eaglevl/model/gemma3/: modeling_gemma3.py
Eagle/Eagle2_5/eaglevl/patch/: fused_monkey_patch.py  packing_attention.py  pad_data_collator.py  train_sampler_patch.py
Eagle/Eagle2_5/eaglevl/train/: arguments.py  constants.py  data_prepare.py  dataset.py  eagle_2_5_vl_finetune.py  liger_loss_weight_ops.py  loading_frames.py  one_logger.py  tools.py
Eagle/Eagle2_5/shell/: download_pretraining_data.sh  prepare.sh  submit_prepare_job.sh  train_stage1_gemma3.sh  train_stage1_gemma3_1b.sh  train_stage1_gemma3_4b.sh  train_stage2.sh  train_stage2_gemma3_1b.sh  train_stage2_gemma3_270m.sh
Eagle/Eagle2_5/streamlit_demo/: api.py  app.py  constants.py  controller.py  forward_port.sh  lasting_demo.sh  library.py  model_worker.py  sd_worker.py  start_demo.sh  utils.py
(+168 files in other folders)
